# teleop

./: .dockerignore  .gitattributes  .gitignore  CHANGES.md  README.md  inspire_driver.py  manus_refiner.py  rby1_ik_pink.py  robot.srdf  small_main.py  update.md  vive_manager.py
.claude/: settings.local.json
InspireHandCtrl/msg/: InspireHandState.msg
docker/: Dockerfile  docker-compose.yaml  pip.conf
manus_ws/src/manus_ros2/: CMakeLists.txt  package.xml
robot_description/rby1/: rby1.srdf  rby1.urdf
src/core/manus_inspire/: package.xml  setup.cfg  setup.py
src/core/manus_inspire/manus_inspire/: manus_inspire.py
src/core/manus_to_inspire/: package.xml  setup.cfg  setup.py
src/core/rby1_ik/: package.xml  setup.cfg  setup.py
src/core/rby1_ik/rby1_ik/: rby1_ik.py
src/core/vive_rby1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/core/vive_rby1/config/: vive_rby1.yaml
src/core/vive_rby1/scripts/: vive_rby1_debug_node
src/core/vive_rby1/src/: vive_rby1_node.cpp
src/core/vive_rby1/vive_rby1/: vive_rby1_node.py
src/gui/scm_gui/: package.xml  setup.cfg  setup.py
src/gui/scm_gui/config/: impedance_presets.yaml
src/gui/scm_gui/scm_gui/: scm_gui_node.py
src/gui/teleop_gui/: package.xml  setup.cfg  setup.py
src/gui/teleop_gui/config/: named_poses.yaml
src/gui/teleop_gui/teleop_gui/: teleop_gui_node.py
src/input/manus_ros2/: CMakeLists.txt
src/input/pedal_ros2/: package.xml  setup.cfg  setup.py
src/input/pedal_ros2/pedal_ros2/: pedal_node.py
src/input/vive_ros2/: package.xml  setup.cfg  setup.py
src/input/vive_ros2/config/: trackers.yaml
src/input/vive_ros2/vive_ros2/: vive_tracker_node.py
src/launch/teleop_bringup/: package.xml  setup.py
src/launch/teleop_bringup/launch/: teleop.launch.py
src/msgs/inspire_hand_msgs/msg/: InspireHandTouch.msg
src/msgs/interbotix_xs_msgs/: CMakeLists.txt  package.xml
src/msgs/manus_ros2_msgs/: package.xml
src/msgs/rby1_core_msgs/: CMakeLists.txt  package.xml
src/msgs/rby1_core_msgs/action/: DrivingFollowWaypoint.action  Rby1Command.action
src/msgs/rby1_core_msgs/msg/: LinkPoseCommand.msg
src/msgs/rby1_core_msgs/srv/: ConnectRobot.srv  GetJointMotionPlan.srv  GetRTAJointMotionPlan.srv  GetRTATaskMotionPlan.srv  GetTaskMotionPlan.srv  MoveToJointPosition.srv  SetCartesianJointLimits.srv  SetControlMode.srv  SetNullspaceJointRef.srv  SetNullspaceWeight.srv  SetServo.srv
src/msgs/scm_recording_msgs/: CMakeLists.txt  package.xml
src/msgs/scm_recording_msgs/srv/: EndRecording.srv  GetStatus.srv  SetTeleOpPose.srv  StartRecording.srv  TogglePause.srv
src/output/inspire_driver/: package.xml  setup.py
