<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manus_inspire</name>
  <version>0.0.1</version>
  <description>Converts Manus glove data to Inspire hand control commands</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>manus_ros2_msgs</depend>
  <depend>inspire_hand_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
