<?xml version="1.0"?>
<package format="3">
  <name>rby1_ik</name>
  <version>0.1.0</version>
  <description>RB-Y1 differential IK library using pink + pinocchio</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <!-- External: pip install pin pink qpsolvers proxqp -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
