<?xml version="1.0"?>
<package format="3">
  <name>vive_ros2</name>
  <version>0.1.0</version>
  <description>Vive Tracker 3.0 → ROS2 PoseStamped publisher via OpenVR</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
