<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_bringup</name>
  <version>0.0.1</version>
  <description>Launch file for full teleoperation system</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <exec_depend>pedal_ros2</exec_depend>
  <exec_depend>vive_ros2</exec_depend>
  <exec_depend>manus_ros2</exec_depend>
  <exec_depend>vive_rby1</exec_depend>
  <exec_depend>manus_inspire</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
