<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspire_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for Inspire hand via Modbus</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>inspire_hand_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
